# Advanced_Software_Robotics

assign1_ws/install/: local_setup.sh  setup.sh
assign1_ws/install/assign1_interfaces/include/assign1_interfaces/assign1_interfaces/msg/detail/: pixel_coordinates__description.c  pixel_coordinates__rosidl_typesupport_fastrtps_cpp.hpp  pixel_coordinates__rosidl_typesupport_introspection_cpp.hpp  pixel_coordinates__struct.h  pixel_coordinates__struct.hpp  pixel_coordinates__type_support.cpp
assign1_ws/install/assign1_interfaces/share/assign1_interfaces/: local_setup.sh  package.ps1
assign1_ws/install/assign1_interfaces/share/assign1_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  export_assign1_interfaces__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake
assign1_ws/install/light_tracking/share/ament_index/resource_index/parent_prefix_path/: light_tracking
assign1_ws/install/light_tracking/share/light_tracking/: package.bash  package.dsv  package.ps1  package.zsh
assign1_ws/install/rel_controller/share/ament_index/resource_index/package_run_dependencies/: rel_controller
assign1_ws/install/rel_controller/share/ament_index/resource_index/parent_prefix_path/: rel_controller
assign1_ws/install/rel_controller/share/rel_controller/: launch.xml  launch.yaml  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
assign1_ws/install/relbot_simulator/share/relbot_simulator/: local_setup.sh  package.sh
assign1_ws/log/: latest_build
assign1_ws/src/: README.txt
assign1_ws/src/assign1_interfaces/: README.txt
assign1_ws/src/light_tracking/: README.txt  package.xml
assign1_ws/src/light_tracking/src/: light_detector.cpp  object_position.cpp
assign1_ws/src/rel_controller/: CMakeLists.txt  Readme.txt  package.xml
assign1_ws/src/rel_controller/src/: controller.cpp
image_ws/install/: local_setup.sh  setup.sh
image_ws/install/assign1_interfaces/include/assign1_interfaces/assign1_interfaces/msg/: pixel_coordinates.h  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h
image_ws/install/assign1_interfaces/include/assign1_interfaces/assign1_interfaces/msg/detail/: pixel_coordinates__functions.c  pixel_coordinates__struct.h  pixel_coordinates__traits.hpp  pixel_coordinates__type_support.cpp
image_ws/install/assign1_interfaces/share/assign1_interfaces/: package.bash  package.sh  package.zsh
image_ws/install/assign1_interfaces/share/assign1_interfaces/cmake/: ament_cmake_export_include_directories-extras.cmake  export_assign1_interfaces__rosidl_generator_cExport-noconfig.cmake  export_assign1_interfaces__rosidl_generator_pyExport.cmake
image_ws/install/image_cpp/share/ament_index/resource_index/package_run_dependencies/: image_cpp
image_ws/install/image_cpp/share/ament_index/resource_index/parent_prefix_path/: image_cpp
image_ws/install/image_cpp/share/image_cpp/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
image_ws/log/: latest_build
image_ws/src/assign1_interfaces/: CMakeLists.txt  package.xml
image_ws/src/image_cpp/: CMakeLists.txt  package.xml
image_ws/src/image_cpp/src/: brightness.cpp  light_detector.cpp  obj_pos.cpp
install/assign1_interfaces/include/assign1_interfaces/assign1_interfaces/msg/detail/: pixel_coordinates__rosidl_typesupport_fastrtps_c.h  pixel_coordinates__struct.hpp  pixel_coordinates__type_support.hpp
install/assign1_interfaces/share/assign1_interfaces/: package.dsv  package.sh
install/assign1_interfaces/share/assign1_interfaces/cmake/: export_assign1_interfaces__rosidl_generator_cppExport.cmake  export_assign1_interfaces__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_assign1_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake
install/assign1_interfaces/share/assign1_interfaces/msg/: PixelCoordinates.idl
install/image_cpp/share/image_cpp/: package.bash  package.zsh
install/light_tracking/share/light_tracking/: local_setup.dsv  local_setup.sh  package.sh
install/light_tracking/share/light_tracking/cmake/: light_trackingConfig.cmake
log/: latest_build
src/light_tracking/: CMakeLists.txt
src/light_tracking/src/: object_position.cpp
