<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rel_controller</name>
  <version>0.0.0</version>
  <description>Nodes for assignment 1.2, a controller of the RELbot.</description>
  <maintainer email="paucovic@gmail.com">shoestick</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>example_interfaces</depend>
  <depend>cv_bridge</depend>
  <depend>opencv2</depend>
  <depend>geometry_msgs</depend>
  <depend>assign1_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

